--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - master
+
 name: Semgrep
 
 jobs:
@@ -12,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -32,7 +34,7 @@ jobs:
 
   semgrep:
     needs: buildmavenDepTree
-    name: Scan
+    name: Semgrep Scan
     runs-on: ubuntu-latest
     env:
       SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
@@ -40,10 +42,14 @@ jobs:
       image: semgrep/semgrep
     steps:
       - uses: actions/checkout@v4
+
       - name: Download artifact from previous job
         uses: actions/download-artifact@v4
         with:
           name: mavendeptree
+
+      - name: Authenticate Semgrep
+        run: semgrep login --token $SEMGREP_APP_TOKEN
 
       - name: Run Semgrep supply-chain scan and fail on critical/high
         run: |
@@ -54,3 +60,10 @@ jobs:
           else
             echo "No critical/high vulnerabilities found."
           fi
+
+
+      - name: Upload Semgrep Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: semgrep-report
+          path: scan_output.txt
